--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
-streamlit
-pandas
-jobspy
-sentence-transformers
-scikit-learn
-pypdf
+flask==3.0.0
+gunicorn==21.2.0
+streamlit==1.31.0
+
+python-jobspy==1.1.74
+pandas==2.1.4
+openpyxl==3.1.2
+
+sentence-transformers==2.2.2
+scikit-learn==1.3.2
+pypdf==3.17.4
+
+python-dotenv==1.0.0
