--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,30 @@
-flask==3.0.0
-gunicorn==21.2.0
+# -------------------------------
+# Web Framework & Deployment
+# -------------------------------
 streamlit==1.31.0
+gunicorn==21.2.0
 
+# -------------------------------
+# Job Scraping & Data Handling
+# -------------------------------
 python-jobspy==1.1.74
 pandas==2.1.4
+numpy==1.26.3
 openpyxl==3.1.2
 
+# -------------------------------
+# GenAI / ML / RAG Components
+# -------------------------------
 sentence-transformers==2.7.0
 scikit-learn==1.3.2
+faiss-cpu==1.7.4
+
+# -------------------------------
+# PDF Processing
+# -------------------------------
 pypdf==3.17.4
 
+# -------------------------------
+# Environment Configuration
+# -------------------------------
 python-dotenv==1.0.0
